fix end of line problem in example

--- a/testfile.tex
+++ b/testfile.tex
@@ -2,6 +2,6 @@
 Here we'll discuss the very many algorithms that can be implemented on the GPU. For more information, Castelli
 \cite{Castelli2018} gives a thorough overview of the use of mip-maps for level of detail, compute shaders for
 frustrum culling, etc. and discusses which APIs support these techniques. Basically, you can use anything from
-DirectX 12\index{DirectX 12} with C++ to WebGL\index{WebGL} with Javascript\index{Javascript} as your API/index{API} ,
+DirectX 12\index{DirectX 12} with C++ to WebGL\index{WebGL} with Javascript/index{Javascript} as your API ,
 due to that these all talk to the same underlying hardware. More specifically, there is literally no better way to
 to accelerate processing data, vs. using just the CPU--so ''just do it''.
